fix(timeline): make vertical line z-index compatible with animations

--- a/src/blocks/blocks/timeline/style.scss
+++ b/src/blocks/blocks/timeline/style.scss
@@ -31,6 +31,7 @@
         position: absolute;
         top: 0;
         width: var(--o-timeline-v-width);
+        z-index: -1;
     }
 
 
